tests/paczka1/small_fuzzy/37529886.err
Error in line 13: S624 A336 83,9
Error in line 15: S624 A140 52,2
